--- a/twicas.ipynb
+++ b/twicas.ipynb
@@ -28,7 +28,7 @@
     "print(question_results)\n",
     "\n",
     "#idとquestion部分の抽出 \n",
-    "table = text.maketrans({\n",
+    "table = ({\n",
     "    '\"': '', #左が置換したい文字、右が新しい文字。\n",
     "    \"'\": '', #左が置換したい文字、右が新しい文字。\n",
     "    \"{\":'',\n",
